# vibe_coding_project

./: README.md
.github/workflows/: ci.yml
cursor_rules_create/docs/: motherduck-design-system.md
cursor_rules_create/frontend/: index.html  script.js  styles.css
cursor_rules_create/spec/:  instruction.md
flowengine/: README.md
flowengine/flow-editor/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
flowengine/integration_test/: .gitignore  docker-compose.yml  service-compose.yml
flowengine/integration_test/mock-services/mail-service/: Cargo.toml  Dockerfile
flowengine/integration_test/mock-services/mail-service/src/: main.rs
flowengine/integration_test/mock-services/sms-service/: Cargo.toml  Dockerfile
flowengine/integration_test/mock-services/sms-service/src/: main.rs
flowengine/specs/: ToolCall.java  ToolSpec.java  executor.md  fdl-spec.md  fdl01.yaml  gml-spec.md  (+4 more)
project_alpha/: .cursorrules  .gitignore  README.md  docker-compose.yml  postgres_compse.yml
project_alpha/backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  env.template  nextest.toml
project_alpha/backend/.cargo/: config.toml
project_alpha/backend/bindings/a2ui_types/: BeginRenderingPayload.ts  BoundValue.ts  DataModelUpdatePayload.ts  SurfaceUpdatePayload.ts  TemplateBinding.ts  UserAction.ts
project_alpha/backend/migrations/: 001_init.sql  002_seed_tags.sql  003_add_ticket_history.sql
project_alpha/backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
project_alpha/backend/src/a2ui/: builder.rs  mod.rs  sse.rs  types.rs
project_alpha/backend/src/handlers/: a2ui.rs  attachments.rs  mod.rs  tags.rs  ticket_history.rs  tickets.rs
project_alpha/backend/src/models/: attachment.rs  mod.rs  tag.rs  ticket.rs  ticket_history.rs
project_alpha/backend/src/routes/: a2ui.rs  attachments.rs  health.rs  mod.rs  tags.rs  tickets.rs
project_alpha/backend/tests/: attachment_api_test.rs  status_transition_test.rs  tag_api_test.rs  ticket_api_test.rs  ticket_history_test.rs
project_alpha/backend/tests/common/: mod.rs
(+273 files in other folders)
