[package]
name = "ticket-backend"
version = "0.1.0"
edition = "2021"
authors = ["Project Alpha Team"]
description = "Ticket management system backend"

[lib]
name = "ticket_backend"
path = "src/lib.rs"

[[bin]]
name = "ticket-backend"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.8.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
anyhow = "1"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"

[profile.release]
lto = true
opt-level = 3
